Reworked FileVersionExtDTO to use composition instead of flattening
