# CloudDrive.Core/DTO/FileVersionExtDTO.cs
@@ -12,37 +12,14 @@ namespace CloudDrive.Core.DTO
     /// </summary>
     public class FileVersionExtDTO
     {
-        public Guid FileId { get; set; }
-        public Guid UserId { get; set; }
-        public bool IsDir { get; set; }
-        public bool Deleted { get; set; }
-        public DateTime FileCreatedDate { get; set; }
-        public DateTime? FileModifiedDate { get; set; }
-
-        public Guid FileVersionId { get; set; }
-        public string? ClientDirPath { get; set; }
-        public string ClientFileName { get; set; }
-        public int VersionNr { get; set; }
-        public string? Md5 { get; set; }
-        public long? SizeBytes { get; set; }
-        public DateTime FileVersionCreatedDate { get; set; }
+        public FileDTO File { get; set; }
+        public FileVersionDTO FileVersion { get; set; }
 
 
-        public FileVersionExtDTO(FileDTO f, FileVersionDTO fv)
+        public FileVersionExtDTO(FileDTO file, FileVersionDTO fileVersion)
         {
-            FileId = f.FileId;
-            UserId = f.UserId;
-            IsDir = f.IsDir;
-            Deleted = f.Deleted;
-            FileCreatedDate = f.CreatedDate;
-            FileModifiedDate = f.ModifiedDate;
-            FileVersionId = fv.FileVersionId;
-            ClientDirPath = fv.ClientDirPath;
-            ClientFileName = fv.ClientFileName;
-            VersionNr = fv.VersionNr;
-            Md5 = fv.Md5;
-            SizeBytes = fv.SizeBytes;
-            FileVersionCreatedDate = fv.CreatedDate;
+            File = file;
+            FileVersion = fileVersion;
         }
 
 
@@ -51,25 +28,12 @@ namespace CloudDrive.Core.DTO
         /// </summary>
         public string ClientFilePath()
         {
-            return Path.Combine(
-                ClientDirPath ?? string.Empty,
-                ClientFileName
-            );
+            return FileVersion.ClientFilePath();
         }
 
         public FileVersionDTO TrimExt()
         {
-            return new FileVersionDTO
-            {
-                FileVersionId = this.FileVersionId,
-                FileId = this.FileId,
-                ClientFileName = this.ClientFileName,
-                ClientDirPath = this.ClientDirPath,
-                SizeBytes = this.SizeBytes,
-                VersionNr = this.VersionNr,
-                CreatedDate = this.FileVersionCreatedDate,
-                Md5 = this.Md5
-            };
+            return FileVersion;
         }
     }
 }
